# api/openapi.yaml
@@ -7,7 +7,7 @@ info:
   license:
     name: GPL-3.0 license
     url: https://github.com/IS-T51/animati/blob/main/LICENSE
-  version: 0.0.2
+  version: 0.0.4
 servers:
 - url: https://api.animati.app/v1
 - url: http://localhost:8080/
@@ -204,13 +204,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/Risposta'
       x-swagger-router-controller: Utente
-  /attività/{id}:
+  /attivit%C3%A0/{id}:
     get:
       tags:
       - attività
       summary: Ottieni l'attività
       description: Ottieni l'attività con l'id specificato
-      operationId: getAttività
+      operationId: getAttivita
       parameters:
       - name: id
         in: path
@@ -227,7 +227,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Attivita'
+                $ref: '#/components/schemas/Attività'
         "404":
           description: L'attività non esiste
           content:
@@ -246,7 +246,7 @@ paths:
       - attività
       summary: Modifica l'attività
       description: Modifica l'attività con l'id specificato
-      operationId: modificaAttività
+      operationId: modificaAttivita
       parameters:
       - name: id
         in: path
@@ -262,7 +262,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Attivita'
+              $ref: '#/components/schemas/Attività'
         required: true
       responses:
         "200":
@@ -304,7 +304,7 @@ paths:
       security:
       - autenticato: []
       x-swagger-router-controller: Attivit
-  /attività/{id}/valutazione:
+  /attivit%C3%A0/{id}/valutazione:
     get:
       tags:
       - attività
@@ -421,7 +421,7 @@ paths:
       security:
       - autenticato: []
       x-swagger-router-controller: Attivit
-  /attività/{id}/segnalazioni:
+  /attivit%C3%A0/{id}/segnalazioni:
     get:
       tags:
       - attività
@@ -568,7 +568,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Attivita'
+                  $ref: '#/components/schemas/Attività'
                 x-content-type: application/json
         "204":
           description: Nessuna attività presente nel catalogo
@@ -600,7 +600,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Attivita'
+              $ref: '#/components/schemas/Attività'
         required: true
       responses:
         "200":
@@ -608,7 +608,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Attivita'
+                $ref: '#/components/schemas/Attività'
         "400":
           description: Richiesta non valida
           content:
@@ -655,7 +655,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Attivita'
+                  $ref: '#/components/schemas/Attività'
                 x-content-type: application/json
         "400":
           description: Richiesta non valida
@@ -1087,7 +1087,7 @@ components:
         ruolo: autenticato
         id: 0
         email: ""
-    Attivita:
+    Attività:
       required:
       - id
       type: object
